<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCarotte">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"/>
    <TextView
        android:layout_below="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carotte"
        android:text="@string/carotte"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/image_carote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carotte"
        android:layout_margin="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/photo_carotte"
        android:src="@drawable/carotte" />

    <TextView
        android:id="@+id/texte_carotte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texte_carotte"
        android:layout_below="@+id/image_carote"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        />

</RelativeLayout>