<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/fiches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:text="@string/fiches"
        android:textSize="@android:dimen/app_icon_size" />
    <Button
        android:id="@+id/btn_tomate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fiches"
        android:text="@string/tomate"/>
    <Button
        android:id="@+id/btn_carotte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_tomate"
        android:text="@string/carotte"/>

</RelativeLayout>