<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/suivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/suivi"
            android:textSize="@android:dimen/app_icon_size" />

        <TextView
            android:id="@+id/texte_graph1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/suivi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/texte_graph1"
            android:textSize="20sp" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/texte_graph1"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:id="@+id/texte_graph2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/graph"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/texte_graph2"
            android:textSize="20sp" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/texte_graph2"
            android:layout_marginTop="30dp" />
    </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
